--- a/AStar.Organization.Infrastructure.API/appsettings.json
+++ b/AStar.Organization.Infrastructure.API/appsettings.json
@@ -2,6 +2,11 @@
   "DbConnection": "Server=localhost;Port=5432;Database=Test.DB;User Id=postgres;Password=diakonttest228;Encoding=UTF8;",
   "ApplicationName": "AStar.Organization",
   "ApiName": "AStar.Organization.API",
+  "RandomGenerationApiKey": "2cfb0e5c224f4a48a2d400908c14939e",
+  "RandomGenerationApiUrl": "https://randommer.io/api/Card",
+  "JsonOptions": {
+    "PropertyNameCaseInsensitive": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
