--- a/AStar.Organisation.Core.Domain/AStar.Organisation.Core.Domain.csproj
+++ b/AStar.Organisation.Core.Domain/AStar.Organisation.Core.Domain.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>AStar.Domain</RootNamespace>
+        <RootNamespace>AStar.Organisation.Core.Domain</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
