--- a/AStar.Organization.Infrastructure.API/AStar.Organization.Infrastructure.API.csproj
+++ b/AStar.Organization.Infrastructure.API/AStar.Organization.Infrastructure.API.csproj
@@ -22,4 +22,8 @@
       <ProjectReference Include="..\AStar.Organisation.Infrastructure.DAL\AStar.Organisation.Infrastructure.DAL.csproj" />
       <ProjectReference Include="..\AStar.Organization.Infrastructure.BLL\AStar.Organization.Infrastructure.BLL.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
 </Project>
