--- a/AStar.Organization.Infrastructure.API/AStar.Organization.Infrastructure.API.csproj
+++ b/AStar.Organization.Infrastructure.API/AStar.Organization.Infrastructure.API.csproj
@@ -26,4 +26,17 @@
     <ItemGroup>
       <Folder Include="Migrations" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="appsettings.Development.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Update="appsettings.Test.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
 </Project>
