--- a/src/AStar.Organization.Infrastructure.API/appsettings.json
+++ b/src/AStar.Organization.Infrastructure.API/appsettings.json
@@ -4,6 +4,9 @@
   "ApiName": "AStar.Organization.API",
   "RandomGenerationApiKey": "2cfb0e5c224f4a48a2d400908c14939e",
   "RandomGenerationApiUrl": "https://randommer.io/api/Card",
+  "Kafka": {
+    "BootstrapServers": "http://localhost:5041"
+  },
   "JsonOptions": {
     "PropertyNameCaseInsensitive": true
   },
