--- a/src/AStar.Organization.Infrastructure.API/appsettings.json
+++ b/src/AStar.Organization.Infrastructure.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DbConnection": "Server=localhost;Port=5432;Database=Test.DB;User Id=postgres;Password=diakonttest228;Encoding=UTF8;",
+  "DbConnection": "Server=localhost;Port=5432;Database=astar_organization_db;User Id=postgres;Password=diakonttest228;Encoding=UTF8;",
   "ApplicationName": "AStar.Organization",
   "ApiName": "AStar.Organization.API",
   "RandomGenerationApiKey": "2cfb0e5c224f4a48a2d400908c14939e",
@@ -18,3 +18,5 @@
   },
   "AllowedHosts": "*"
 }
+
+//dotnet ef dbcontext scaffold "Server=localhost;Port=5432;Database=astar_organization_db;User Id=postgres;Password=diakonttest228;Encoding=UTF8;" Npgsql.EntityFrameworkCore.PostgreSQL -o Models
